Added homework for python_basics

--- a/python_basics/python_basics.ipynb
+++ b/python_basics/python_basics.ipynb
@@ -58,6 +58,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_1 = '640Кб должно хватить для любых задач. Билл Гейтс (по легенде)'\n",
+    "phrase_2 = 'Насколько проще было бы писать программы, если бы не заказчики'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Фраза 2 длиннее фразы 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(phrase_1) > len(phrase_2):\n",
+    "    print('Фраза 1 длиннее фразы 2')\n",
+    "elif len(phrase_2) > len(phrase_1):\n",
+    "    print('Фраза 2 длиннее фразы 1')\n",
+    "else:\n",
+    "    print('Фразы равной длины')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,6 +118,35 @@
     "```\n",
     "Результат:  \n",
     "`Обычный год` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Обычный год\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (year % 4 == 0 and year % 100 != 0) or year % 400 == 0: #проверка на 366 или 365 дней в году\n",
+    "    print('Високосный год')\n",
+    "else:\n",
+    "    print('Обычный год')"
    ]
   },
   {
@@ -128,6 +189,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите день20\n",
+      "Введите месяцМай\n",
+      "Ваш знак зодиака: Телец\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = int(input('Введите день'))\n",
+    "month = str(input('Введите месяц'))\n",
+    "\n",
+    "\n",
+    "if (day >= 21 and day <= 31 and month == 'Март') or (month == 'Апрель' and day >= 1 and day <= 19):\n",
+    "    print(\"Ваш знак зодиака: Овен\")\n",
+    "\n",
+    "elif (day >= 20 and day <= 30 and month == 'Апрель') or (month == 'Май' and day >= 1 and day <= 20):\n",
+    "    print(\"Ваш знак зодиака: Телец\")\n",
+    "\n",
+    "elif (day >= 21 and day <= 31 and month == 'Май') or (month == 'Июнь' and day >= 1 and day <= 21):\n",
+    "    print(\"Ваш знак зодиака: Близнецы\")\n",
+    "\n",
+    "elif (day >= 22 and day <= 30 and month == 'Июнь') or (month == 'Июль' and day >= 1 and day <= 22):\n",
+    "    print(\"Ваш знак зодиака: Рак\")\n",
+    "\n",
+    "elif (day >= 23 and day <= 31 and month == 'Июль') or (month == 'Август' and day >= 1 and day <= 22):\n",
+    "    print(\"Ваш знак зодиака: Лев\")\n",
+    "\n",
+    "elif (day >= 23 and day <= 31 and month == 'Август') or (month == 'Сентябрь' and day >= 1 and day <= 22):\n",
+    "    print(\"Ваш знак зодиака: Дева\")\n",
+    "\n",
+    "elif (day >= 23 and day <= 30 and month == 'Сентябрь') or (month == 'Октябрь' and day >= 1 and day <= 23):\n",
+    "    print(\"Ваш знак зодиака: Весы\")\n",
+    "\n",
+    "elif (day >= 24 and day <= 31 and month == 'Октябрь') or (month == 'Ноябрь' and day >= 1 and day <= 22):\n",
+    "    print(\"Ваш знак зодиака: Скорпион\")\n",
+    "\n",
+    "elif (day >= 23 and day <= 30 and month == 'Ноябрь') or (month == 'Декабрь' and day >= 1 and day <= 21):\n",
+    "    print(\"Ваш знак зодиака: Стрелец\")\n",
+    "\n",
+    "elif (day >= 22 and day <= 31 and month == 'Декабрь') or (month == 'Январь' and day >= 1 and day <= 20):\n",
+    "    print(\"Ваш знак зодиака: Козерог\")\n",
+    "\n",
+    "elif (day >= 21 and day <= 31 and month == 'Январь') or (month == 'Февраль' and day >= 1 and day <= 18):\n",
+    "    print(\"Ваш знак зодиака: Водолей\")\n",
+    "\n",
+    "elif (day >= 19 and day <= 29 and month == 'Февраль') or (month == 'Март' and day >= 1 and day <= 20):\n",
+    "    print(\"Ваш знак зодиака: Рыбы\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,6 +284,41 @@
     "```\n",
     "Результат:  \n",
     "`Ищите упаковку для лыж` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width = 15\n",
+    "length = 50\n",
+    "height = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Стандартная коробка №3\n"
+     ]
+    }
+   ],
+   "source": [
+    "if width < 15 and length < 15 and height < 15:\n",
+    "    print('Коробка №1')\n",
+    "elif length > 200:\n",
+    "    print('Упаковка для лыж')\n",
+    "elif (width > 15 and width < 50) or (length > 15 and length < 50) or (height > 15 and height < 50):\n",
+    "    print('Коробка №2')\n",
+    "else:\n",
+    "    print('Стандартная коробка №3')"
    ]
   },
   {
