--- a/datatypes_cycles_1/datatypes_cycles_1.ipynb
+++ b/datatypes_cycles_1/datatypes_cycles_1.ipynb
@@ -29,6 +29,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'testing'\n",
+    "if int(len(word)) % 2 == 0:\n",
+    "       print(word[int(len(word) / 2) - 1]+word[int(len(word) / 2)])\n",
+    "else:\n",
+    "       print(word[int(len(word) / 2)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,10 +88,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите число: 0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('Введите число: '))\n",
+    "summa = 0\n",
+    "while a != 0:\n",
+    "    summa += a\n",
+    "    a = int(input('Введите число: '))\n",
+    "print(summa)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задание 3\n",
+    "# Задание 3\n",
     "\n",
     "Мы делаем [MVP](https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BD%D0%B8%D0%BC%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE_%D0%B6%D0%B8%D0%B7%D0%BD%D0%B5%D1%81%D0%BF%D0%BE%D1%81%D0%BE%D0%B1%D0%BD%D1%8B%D0%B9_%D0%BF%D1%80%D0%BE%D0%B4%D1%83%D0%BA%D1%82) dating-сервиса, и у нас есть список парней и девушек.  \n",
     "Выдвигаем гипотезу: лучшие рекомендации мы получим, если просто отсортируем имена по алфавиту и познакомим людей с одинаковыми индексами после сортировки!\n",
@@ -105,6 +149,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Идеальные пары: \n",
+      "Alex и Emma\n",
+      "Arthur и Kate\n",
+      "John и Kira\n",
+      "Peter и Liza\n",
+      "Richard и Trisha\n"
+     ]
+    }
+   ],
+   "source": [
+    "boys = ['Peter', 'Alex', 'John', 'Arthur', 'Richard']\n",
+    "girls = ['Kate', 'Liza', 'Kira', 'Emma', 'Trisha']\n",
+    "if len(sorted(boys)) == len(sorted (girls)):\n",
+    "        print('Идеальные пары: ')\n",
+    "        for i, j in zip(sorted(boys), sorted (girls)):\n",
+    "            print(i,'и', j)\n",
+    "else:\n",
+    "    print('Внимание, кто-то может остаться без пары!')    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,6 +204,34 @@
     "Russia  -  3.7 С\n",
     "Poland  -  12.0 С\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thailand - 23.9 C\n",
+      "Germany - 13.8 C\n",
+      "Russia - 3.7 C\n",
+      "Poland - 12.0 C\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries_temperature = [\n",
+    "    ['Thailand', [75.2, 77, 78.8, 73.4, 68, 75.2, 77]],\n",
+    "    ['Germany', [57.2, 55.4, 59, 59, 53.6]],\n",
+    "    ['Russia', [35.6, 37.4, 39.2, 41, 42.8, 39.2, 35.6]],\n",
+    "    ['Poland', [50, 50, 53.6, 57.2, 55.4, 55.4]]\n",
+    "]\n",
+    "\n",
+    "for country in countries_temperature:\n",
+    "    print(country[0], '-', round((sum(country[1]) / len(country[1]) - 32) / 1.8, 1), 'C')"
    ]
   },
   {
