Added homework for datatypes_cycles_2

--- a/datatypes_cycles_2/datatypes_cycles_2.ipynb
+++ b/datatypes_cycles_2/datatypes_cycles_2.ipynb
@@ -27,6 +27,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids = {'user1': [213, 213, 213, 15, 213], \n",
+    "       'user2': [54, 54, 119, 119, 119], \n",
+    "       'user3': [213, 98, 98, 35]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{98, 35, 15, 213, 54, 119, 214}\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_1, user_2, user_3 = list(ids.values())\n",
+    "geotags = user_1 + user_2 + user_3\n",
+    "print(set(geotags))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +82,55 @@
     "Поисковых запросов, содержащих 2 слов(а): 42.86%\n",
     "Поисковых запросов, содержащих 3 слов(а): 57.14%\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries = [\n",
+    "    'смотреть сериалы онлайн',\n",
+    "    'новости спорта',\n",
+    "    'афиша кино',\n",
+    "    'курс доллара',\n",
+    "    'сериалы этим летом',\n",
+    "    'курс по питону',\n",
+    "    'сериалы про спорт',\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Поисковых запросов, cодержащих 2 слов(а): 42.86%\n",
+      "Поисковых запросов, cодержащих 3 слов(а): 57.14%\n"
+     ]
+    }
+   ],
+   "source": [
+    "storage = {}\n",
+    "\n",
+    "for query in queries:\n",
+    "    words = query.split()\n",
+    "\n",
+    "    if len(words) in storage.keys():\n",
+    "        storage[len(words)] += 1\n",
+    "    else:\n",
+    "        storage.update({\n",
+    "            len(words): 1\n",
+    "        })\n",
+    "\n",
+    "for key, value in sorted(storage.items()):\n",
+    "    percentage = round((value / len(queries)) * 100, 2)\n",
+    "    print(f'Поисковых запросов, cодержащих {key} слов(а): {percentage}%')"
    ]
   },
   {
@@ -84,6 +163,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = {\n",
+    "    'vk': {'revenue': 103, 'cost': 98},\n",
+    "    'yandex': {'revenue': 179, 'cost': 153},\n",
+    "    'facebook': {'revenue': 103, 'cost': 110},\n",
+    "    'adwords': {'revenue': 35, 'cost': 34},\n",
+    "    'twitter': {'revenue': 11, 'cost': 24},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adwords {'revenue': 35, 'cost': 34, 'ROI': 2.94}\n",
+      "facebook {'revenue': 103, 'cost': 110, 'ROI': -6.36}\n",
+      "twitter {'revenue': 11, 'cost': 24, 'ROI': -54.17}\n",
+      "vk {'revenue': 103, 'cost': 98, 'ROI': 5.1}\n",
+      "yandex {'revenue': 179, 'cost': 153, 'ROI': 16.99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in sorted(results.items()):\n",
+    "    value['ROI'] = round(((value['revenue'] / value['cost']) - 1)*100 , 2)\n",
+    "    print(key, value)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,6 +213,25 @@
     "\n",
     "Результат: \n",
     "`Максимальный объем продаж на рекламном канале: vk`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Максимальный объем продаж на рекламном канале: google\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats = {'facebook': 55, 'yandex': 115, 'vk': 120, 'google': 99, 'email': 42, 'ok': 98}\n",
+    "top_channel = max(stats.items(), key=lambda x: x[1])\n",
+    "print('Максимальный объем продаж на рекламном канале:', top_channel[0])"
    ]
   },
   {
