Changed Task 1 in datatypes_cycles_2

--- a/datatypes_cycles_2/datatypes_cycles_2.ipynb
+++ b/datatypes_cycles_2/datatypes_cycles_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,21 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{98, 35, 15, 213, 54, 119, 214}\n"
+      "{98, 35, 15, 213, 54, 119}\n"
      ]
     }
    ],
    "source": [
-    "user_1, user_2, user_3 = list(ids.values())\n",
-    "geotags = user_1 + user_2 + user_3\n",
-    "print(set(geotags))"
+    "import itertools\n",
+    "geotags = list(ids.values())\n",
+    "merged = list(itertools.chain(*geotags))\n",
+    "print(set(merged))"
    ]
   },
   {
